--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
 &display=swap
 &subset=cyrillic-ext 
 */
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Yeseva+One:400&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Gentium+Book+Plus:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:400&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700,italic&display=swap");
 /* ОБНУЛЕНИЕ СТИЛЕЙ */
 *,
 *::before,
