--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ html {
 body {
   line-height: 1;
   color: #4c4c4c;
-  font-family: "Roboto";
+  font-family: "Lato", sans-serif;
 }
 
 .wrapper {
