--- a/css/style.scss
+++ b/css/style.scss
@@ -15,7 +15,7 @@ html {
 body {
   line-height: 1;
   color: #4c4c4c;
-  font-family: 'Roboto';
+  font-family: 'Lato', sans-serif;
   // background-color: #f5f5f5;
 }
 
