--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,87 @@ body {
   margin: 0px auto;
   padding: 0px 15px;
 }
+
+.title {
+  font-family: "Yeseva One", serif;
+  font-size: 36px;
+  line-height: 120%;
+  color: #cc9900;
+}
+.title_white {
+  color: #fff;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.ingredients {
+  background: url(../assets/ingredients/img/bg.jpg) 50% 0/cover no-repeat;
+}
+.ingredients__content {
+  padding: 100px 0px;
+}
+.ingredients__body {
+  max-width: 570px;
+  padding: 75px 81px 78px 80px;
+  margin: 0px 0px 0px auto;
+  background: rgba(0, 0, 0, 0.67);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+.ingredients__title:not(:last-child) {
+  margin-bottom: 15px;
+}
+.ingredients__divider:not(:last-child) {
+  margin-bottom: 23px;
+}
+.ingredients__decor {
+  max-width: 100%;
+}
+.ingredients__text {
+  line-height: 1.5;
+  color: #fff;
+}
+.ingredients__text:not(:last-child) {
+  margin-bottom: 68px;
+}
+.ingredients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 40px;
+     -moz-column-gap: 40px;
+          column-gap: 40px;
+  row-gap: 40px;
+}
+.ingredients__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 110px;
+          flex: 0 0 110px;
+  height: 110px;
+}
+.ingredients__img {
+  border-radius: 50%;
+  border: solid 5px rgba(255, 255, 255, 0.09);
+  max-width: 100%;
+}
