--- a/css/style.css
+++ b/css/style.css
@@ -294,3 +294,73 @@ body {
   font-size: 18px;
   color: #fff;
 }
+
+.reservations {
+  background: url("../assets/reservations/img/pattern.png") 50% 0/cover no-repeat, url("../assets/reservations/img/bg.png") 50% 0/cover no-repeat;
+}
+.reservations__content {
+  padding: 100px 0px 100px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0px -15px;
+  row-gap: 30px;
+}
+.reservations__left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0px 15px;
+}
+.reservations__images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0px -15px;
+}
+.reservations__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0px 15px;
+}
+.reservations__img {
+  max-width: 100%;
+}
+.reservations__right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0px 15px;
+}
+.reservations__body {
+  padding: 0px 70px 0px 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+.reservations__title:not(:last-child) {
+  margin-bottom: 13px;
+}
+.reservations__decor:not(:last-child) {
+  margin-bottom: 24px;
+}
+.reservations__divider {
+  max-width: 100%;
+}
+.reservations__text {
+  line-height: 150%;
+}
+.reservations__text:not(:last-child) {
+  margin-bottom: 10px;
+}
