--- a/css/style.css
+++ b/css/style.css
@@ -364,3 +364,101 @@ body {
 .reservations__text:not(:last-child) {
   margin-bottom: 10px;
 }
+.reservations .form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.reservations .form__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0px -15px;
+  row-gap: 30px;
+}
+.reservations .form__body:not(:last-child) {
+  margin-bottom: 20px;
+}
+.reservations .form__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 10px;
+  padding: 0px 15px;
+}
+.reservations .form__label {
+  font-weight: bold;
+  text-align: left;
+  color: #c9a131;
+}
+.reservations .form__input {
+  padding: 11px 14px;
+  background: rgba(255, 255, 255, 0.5);
+  border: solid 1px #c8c6c6;
+}
+.reservations .form__input::-webkit-input-placeholder {
+  font-style: italic;
+  text-align: left;
+  color: #7c7c7c;
+}
+.reservations .form__input::-moz-placeholder {
+  font-style: italic;
+  text-align: left;
+  color: #7c7c7c;
+}
+.reservations .form__input:-ms-input-placeholder {
+  font-style: italic;
+  text-align: left;
+  color: #7c7c7c;
+}
+.reservations .form__input::-ms-input-placeholder {
+  font-style: italic;
+  text-align: left;
+  color: #7c7c7c;
+}
+.reservations .form__input::placeholder {
+  font-style: italic;
+  text-align: left;
+  color: #7c7c7c;
+}
+.reservations .form__input:hover {
+  border: solid 1px #c89f2d;
+}
+.reservations .form__select {
+  padding: 11px 14px;
+  background: rgba(255, 255, 255, 0.5);
+  border: solid 1px #c8c6c6;
+  font-style: italic;
+  text-align: left;
+  color: #7c7c7c;
+}
+.reservations .form__select:hover {
+  border: solid 1px #c89f2d;
+}
+.reservations .form__option {
+  padding: 11px 14px;
+  color: #4c4c4c;
+}
+.reservations .form__button {
+  cursor: pointer;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-align: center;
+  color: #fff;
+  padding: 11px 60px 12px 63px;
+  border: solid 1px #c89f2d;
+  background-color: #c89f2d;
+}
