--- a/css/style.scss
+++ b/css/style.scss
@@ -152,8 +152,6 @@ body {
     max-width: 100%;
   }
 }
-.title {
-}
 
 .ingredients {
   background: url('../assets/ingredients/img/bg.jpg') 50% 0 / cover no-repeat;
@@ -419,10 +417,89 @@ body {
 
   &__form {
   }
-}
-.title {
-}
-.form {
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    // .form__body
+
+    &__body {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0px -15px;
+      row-gap: 30px;
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+    }
+
+    // .form__item
+
+    &__item {
+      flex: 1 1 50%;
+      display: flex;
+      flex-direction: column;
+      row-gap: 10px;
+      padding: 0px 15px;
+    }
+
+    // .form__label
+
+    &__label {
+      font-weight: bold;
+      text-align: left;
+      color: #c9a131;
+    }
+
+    // .form__input
+
+    &__input {
+      padding: 11px 14px;
+      background: rgba(255, 255, 255, 0.5);
+      border: solid 1px #c8c6c6;
+      &::placeholder {
+        font-style: italic;
+        text-align: left;
+        color: #7c7c7c;
+      }
+      &:hover {
+        border: solid 1px #c89f2d;
+      }
+    }
+
+    // .form__select
+
+    &__select {
+      padding: 11px 14px;
+      background: rgba(255, 255, 255, 0.5);
+      border: solid 1px #c8c6c6;
+      font-style: italic;
+      text-align: left;
+      color: #7c7c7c;
+      &:hover {
+        border: solid 1px #c89f2d;
+      }
+    }
+
+    // .form__option
+
+    &__option {
+      padding: 11px 14px;
+      color: #4c4c4c;
+    }
+
+    // .form__button
+
+    &__button {
+      cursor: pointer;
+      align-self: center;
+      text-align: center;
+      color: #fff;
+      padding: 11px 60px 12px 63px;
+      border: solid 1px #c89f2d;
+      background-color: #c89f2d;
+    }
+  }
 }
 
 .footer {
