--- a/css/style.scss
+++ b/css/style.scss
@@ -416,6 +416,9 @@ body {
   // .reservations__form
 
   &__form {
+    &:not(:first-child) {
+      margin-top: 32px;
+    }
   }
 
   .form {
@@ -427,9 +430,9 @@ body {
       display: flex;
       flex-wrap: wrap;
       margin: 0px -15px;
-      row-gap: 30px;
+      row-gap: 25px;
       &:not(:last-child) {
-        margin-bottom: 20px;
+        margin-bottom: 32px;
       }
     }
 
@@ -437,15 +440,18 @@ body {
 
     &__item {
       flex: 1 1 50%;
+      min-width: 100px;
       display: flex;
       flex-direction: column;
-      row-gap: 10px;
+      row-gap: 8px;
       padding: 0px 15px;
     }
 
     // .form__label
 
     &__label {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px;
       font-weight: bold;
       text-align: left;
       color: #c9a131;
@@ -454,10 +460,16 @@ body {
     // .form__input
 
     &__input {
-      padding: 11px 14px;
+      font-size: 16px;
+      min-height: 36px;
+      padding: 0px 13px;
+      // padding: 10px 14px;
       background: rgba(255, 255, 255, 0.5);
       border: solid 1px #c8c6c6;
+      // width: 100%;
       &::placeholder {
+        padding: 0px 2px;
+        font-family: 'Open Sans', sans-serif;
         font-style: italic;
         text-align: left;
         color: #7c7c7c;
@@ -470,9 +482,12 @@ body {
     // .form__select
 
     &__select {
-      padding: 11px 14px;
+      font-size: 16px;
+      min-height: 36px;
+      padding: 0px 13px;
       background: rgba(255, 255, 255, 0.5);
       border: solid 1px #c8c6c6;
+      font-family: 'Open Sans', sans-serif;
       font-style: italic;
       text-align: left;
       color: #7c7c7c;
@@ -484,7 +499,8 @@ body {
     // .form__option
 
     &__option {
-      padding: 11px 14px;
+      font-family: 'Lato', sans-serif;
+      font-style: normal;
       color: #4c4c4c;
     }
 
@@ -493,9 +509,11 @@ body {
     &__button {
       cursor: pointer;
       align-self: center;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 16px;
       text-align: center;
       color: #fff;
-      padding: 11px 60px 12px 63px;
+      padding: 7px 60px 7px 60px;
       border: solid 1px #c89f2d;
       background-color: #c89f2d;
     }
