--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
-  min-width: 100px;
+  min-width: 180px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -416,6 +416,7 @@ body {
   padding: 0px 13px;
   background: rgba(255, 255, 255, 0.5);
   border: solid 1px #c8c6c6;
+  width: 100%;
 }
 .form__input::-webkit-input-placeholder {
   padding: 0px 2px;
@@ -458,6 +459,7 @@ body {
 .form__select {
   font-size: 16px;
   min-height: 36px;
+  width: 100%;
   padding: 0px 13px;
   background: rgba(255, 255, 255, 0.5);
   border: solid 1px #c8c6c6;
