--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 }
 
 [class*=__container] {
-  max-width: 1170px;
+  max-width: 1200px;
   margin: 0px auto;
   padding: 0px 15px;
 }
@@ -175,7 +175,7 @@ body {
   padding: 100px 0px;
 }
 .ingredients__body {
-  max-width: 50%;
+  max-width: 48.71%;
   padding: 75px 81px 78px 80px;
   margin: 0px 0px 0px auto;
   background: rgba(0, 0, 0, 0.67);
@@ -309,10 +309,10 @@ body {
   row-gap: 30px;
 }
 .reservations__image {
+  padding: 0px 15px;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 25%;
           flex: 1 1 25%;
-  padding: 0px 15px;
   min-width: 250px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -320,9 +320,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .reservations__img {
   max-width: 100%;
